--- a/1-Software/Inquisit程序安装教程/安装说明.md
+++ b/1-Software/Inquisit程序安装教程/安装说明.md
@@ -1,6 +1,6 @@
 # Inquisit Lab 4 安装教程
 
-1. 登录。打开网站 http://www.millisecond.com，点击sign in, 账号weicong1203@163.com，密码：wc@wyj1314
+1. 登录。打开网站 http://www.millisecond.com，点击sign in, 账号weicong1203@163.com，密码：**********
 1. 下载。点击 register inquisit 跳转到下载页面，下载对应Windows版本或者Mac版本的Inquisit Lab 4. 或者可以直接下载GitHub中已经提供的软件安装包。
 1. 安装。Windows 双击下载的EXE安装包即可完成安装，Mac 点击下载的PKG文件即可完成安装，安装完成后会跳出注册对话框。
 1. 激活。在跳出的激活对话框中会出现对应的机器码，要求输入激活码。这个时候回到register inquisit 网站页面，将激活对话框中出现的机器码复制到网页对应框中，点击注册激活，会出现一行激活码，将这串字符复制粘贴到激活对话框中，即可完成注册激活。
